	- improved notebook interface for smoother refresh
	- added the possibility to use ssl when registering new account
	- now automatically login after registration
	- buddy pouncing as a component
	- reworked incoming message dialog
	- extra options for profiles now in tabbed notebook
	- Itcl interface for applets accessing whiteboard functions.
	- Itcl runtime environment for applets.


Coccinella-0.94.11 (040601): 	Short summary --

        - internal ip not always set correctly which made transfers fail


Coccinella-0.94.10 (040528): 	Short summary --

        - STRINGPREP fixes in roster, browse, disco,...
	- minor fixes for XMPP (ejabberd and jabberd2)


Coccinella-0.94.9 (04????): 	Short summary --

        - prepared for using xml/svg for all whiteboard stuff
	- major internal code reorganizations to separate whiteboard code
          from rest and be independent of protocols
	- reworked the groupchat dialog from scratch
	- major restructure of all browse code
	- added support for emoticon sets
	- added disco support
	- new component mechanism for plugins
	- removed all addons stuff, and moved to plugins
	- windows taskbar
	- added privacy/filter support


Coccinella-0.94.8 (040305): 	Short summary --

        - fixed critical bugs in p2p startup
        - fixed bug when auto away
        - added SVG importer


Coccinella-0.94.7 (040228): 	Short summary --

	- separating actual whiteboard code from rest.
	- uses resource database for everything, also images
	- chat dialog rewritten; new buttons, jabber:x:event support
	- using a hooks mechanism to handle callbacks in a more
	  modular way
  	- user profiles rewritten from scratch
	- alert sounds part rewritten; added a few more sound events;
          added possiblity to use sound sets
	- reworked tabbed notebook interface
	- added support for tkdnd (drag and drop) in the whiteboard for
          linux/unix and windows


Coccinella-0.94.6 (03????): 	Short summary --
