@@ -19,6 +19,8 @@ Coccinella-0.95.0 (04????): 	Short summary --
 	- extra options for profiles now in tabbed notebook
 	- Itcl interface for applets accessing whiteboard functions.
 	- Itcl runtime environment for applets.
+	- card game applet as a first example.
+	- slide show component.
 
 
 Coccinella-0.94.11 (040601): 	Short summary --
